Fix some thread pinning issues